--- a/CS_MVC4/CS_MVC4.csproj
+++ b/CS_MVC4/CS_MVC4.csproj
@@ -37,6 +37,7 @@
     <Reference Include="RadPdf, Culture=neutral, PublicKeyToken=ceef76a2a0e50e3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\RadPdf.dll</HintPath>
+      <HintPath>%PROGRAMFILES%\RAD PDF\WebControl\RadPdf.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
