--- a/CS_MVC5/CS_MVC5.csproj
+++ b/CS_MVC5/CS_MVC5.csproj
@@ -55,6 +55,7 @@
     <Reference Include="RadPdf, Culture=neutral, PublicKeyToken=ceef76a2a0e50e3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\RadPdf.dll</HintPath>
+      <HintPath>%PROGRAMFILES%\RAD PDF\WebControl\RadPdf.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity" />
