--- a/CS_MVC5/CS_MVC5.csproj
+++ b/CS_MVC5/CS_MVC5.csproj
@@ -54,9 +54,10 @@
     </Reference>
     <Reference Include="RadPdf, Culture=neutral, PublicKeyToken=ceef76a2a0e50e3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\RadPdf.dll</HintPath>
-      <HintPath>C:\Program Files\RAD PDF\WebControl\RadPdf.dll</HintPath>
-      <HintPath>$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('bin\RadPdf.dll')">bin\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('C:\Program Files\RAD PDF\WebControl\RadPdf.dll')">C:\Program Files\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll')">$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll')">..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity" />
