--- a/CS_NET5/RadPdfNet5Demo.csproj
+++ b/CS_NET5/RadPdfNet5Demo.csproj
@@ -1,11 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="RadPdfCore" Version="*" />
+    <PackageReference Include="RadPdf" Version="3.22.1" />
   </ItemGroup>
-
 </Project>
