--- a/VB/VB.vbproj
+++ b/VB/VB.vbproj
@@ -42,9 +42,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="RadPdf">
-      <HintPath>bin\RadPdf.dll</HintPath>
-      <HintPath>C:\Program Files\RAD PDF\WebControl\RadPdf.dll</HintPath>
-      <HintPath>$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath Condition="Exists('bin\RadPdf.dll')">bin\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('C:\Program Files\RAD PDF\WebControl\RadPdf.dll')">C:\Program Files\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll')">$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll</HintPath>
+      <HintPath Condition="Exists('..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll')">..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
