--- a/CS/CS.csproj
+++ b/CS/CS.csproj
@@ -42,9 +42,7 @@
   <ItemGroup>
     <Reference Include="RadPdf, Culture=neutral, PublicKeyToken=ceef76a2a0e50e3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath Condition="Exists('C:\Program Files\RAD PDF\WebControl\RadPdf.dll')">C:\Program Files\RAD PDF\WebControl\RadPdf.dll</HintPath>
-      <HintPath Condition="Exists('$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll')">$(ProgramFiles)\RAD PDF\WebControl\RadPdf.dll</HintPath>
-      <HintPath Condition="Exists('..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll')">..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll</HintPath>
+      <HintPath>..\packages\RadPdf.3.22.1\lib\net35\RadPdf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
