AWS S3 PdfLiteStorageProvider example ICI

--- a/CS_Core_No_Service/RadPdfCoreDemoNoService.csproj
+++ b/CS_Core_No_Service/RadPdfCoreDemoNoService.csproj
@@ -4,6 +4,7 @@
     <UseRazorBuildServer>false</UseRazorBuildServer>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.1.26" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
