--- a/CS_Core_No_Service/Settings.json
+++ b/CS_Core_No_Service/Settings.json
@@ -1,4 +1,5 @@
 {
   "AzureStorageConnectionString": "<Connection string of your Azure Blob Storage account>",
-  "AzureStorageContainerName": "radpdf"
+  "AzureStorageContainerName": "radpdf",
+  "S3BucketName":  "radpdf-bucket"
 }
