Updated for RAD PDF 3.25.2 NuGet New No Service examples for the .NET Framework can now be run without installing RAD PDF or the RAD PDF System Service (along with the existing Core / NET 5 No Service examples)

--- a/CS_NET5_No_Service/RadPdfNet5DemoNoService.csproj
+++ b/CS_NET5_No_Service/RadPdfNet5DemoNoService.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="RadPdf" Version="3.25.0" />
+    <PackageReference Include="RadPdf" Version="3.25.2" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.80.3" />
   </ItemGroup>
 </Project>
