--- a/VB/VB.x64.vbproj
+++ b/VB/VB.x64.vbproj
@@ -6,15 +6,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
     </ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AAF7DECE-E77F-441F-92E2-03D9834AE6C1}</ProjectGuid>
-    <ProjectTypeGuids>{349C5851-65DF-11DA-9384-00065B846F21};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <SchemaVersion>
+    </SchemaVersion>
+    <ProjectGuid>{74400F56-C1BB-41CF-A869-E55AF7A690D8}</ProjectGuid>
+    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CS</RootNamespace>
-    <AssemblyName>CS</AssemblyName>
+    <RootNamespace>VB</RootNamespace>
+    <AssemblyName>VB</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <MyType>Custom</MyType>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -25,20 +26,21 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <DefineDebug>true</DefineDebug>
+    <DefineTrace>true</DefineTrace>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DocumentationFile>VB.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
+    <DefineDebug>false</DefineDebug>
+    <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DocumentationFile>VB.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="RadPdf, Culture=neutral, PublicKeyToken=ceef76a2a0e50e3b, processorArchitecture=MSIL">
@@ -47,16 +49,39 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+  </ItemGroup>
+  <ItemGroup>
+    <Import Include="Microsoft.VisualBasic" />
+    <Import Include="System" />
+    <Import Include="System.Collections" />
+    <Import Include="System.Collections.Generic" />
+    <Import Include="System.Data" />
+    <Import Include="System.Linq" />
+    <Import Include="System.Xml.Linq" />
+    <Import Include="System.Diagnostics" />
+    <Import Include="System.Collections.Specialized" />
+    <Import Include="System.Configuration" />
+    <Import Include="System.Text" />
+    <Import Include="System.Text.RegularExpressions" />
+    <Import Include="System.Web" />
+    <Import Include="System.Web.Caching" />
+    <Import Include="System.Web.SessionState" />
+    <Import Include="System.Web.Security" />
+    <Import Include="System.Web.Profile" />
+    <Import Include="System.Web.UI" />
+    <Import Include="System.Web.UI.WebControls" />
+    <Import Include="System.Web.UI.WebControls.WebParts" />
+    <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Basic.aspx" />
@@ -72,9 +97,10 @@
     <Content Include="lite\PDF-Form-Filler.aspx" />
     <Content Include="lite\signatures\Default.aspx" />
     <Content Include="lite\Upload.aspx" />
-    <Content Include="no-service\Sql.aspx" />
-    <Content Include="no-service\Default.aspx" />
-    <Content Include="no-service\Lite.aspx" />
+    <Content Include="obj\Debug\TempPE\App_GlobalResources.PdfWebControlResources.designer.vb.dll" />
+    <Content Include="obj\Release\VB.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Release\VB.dll" />
+    <Content Include="obj\Release\VB.pdb" />
     <Content Include="PDF-Editor.aspx" />
     <Content Include="PDF-Form-Filler.aspx" />
     <Content Include="signatures\Default.aspx" />
@@ -84,183 +110,210 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Code\SessionLiteStorageProvider.cs" />
-    <Content Include="App_Code\NoServicePdfIntegrationProvider.cs" />
-    <Compile Include="Basic.aspx.cs">
+    <Compile Include="Basic.aspx.designer.vb">
+      <DependentUpon>Basic.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Basic.aspx.vb">
       <DependentUpon>Basic.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Basic.aspx.designer.cs">
-      <DependentUpon>Basic.aspx</DependentUpon>
+    <Compile Include="Custom-Interface.aspx.designer.vb">
+      <DependentUpon>Custom-Interface.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Custom-Interface.aspx.cs">
+    <Compile Include="Custom-Interface.aspx.vb">
       <DependentUpon>Custom-Interface.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Custom-Interface.aspx.designer.cs">
-      <DependentUpon>Custom-Interface.aspx</DependentUpon>
+    <Compile Include="Easy-Integration.aspx.designer.vb">
+      <DependentUpon>Easy-Integration.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Easy-Integration.aspx.cs">
+    <Compile Include="Easy-Integration.aspx.vb">
       <DependentUpon>Easy-Integration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Easy-Integration.aspx.designer.cs">
-      <DependentUpon>Easy-Integration.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\Basic.aspx.designer.cs">
-      <DependentUpon>Basic.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\Custom-Interface.aspx.designer.cs">
-      <DependentUpon>Custom-Interface.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\Easy-Integration.aspx.designer.cs">
-      <DependentUpon>Easy-Integration.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\PDF-Editor.aspx.designer.cs">
+    <Compile Include="PDF-Editor.aspx.designer.vb">
       <DependentUpon>PDF-Editor.aspx</DependentUpon>
     </Compile>
-    <Compile Include="lite\PDF-Form-Filler.aspx.designer.cs">
-      <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\signatures\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="lite\Upload.aspx.designer.cs">
-      <DependentUpon>Upload.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="no-service\Sql.aspx.cs">
-      <DependentUpon>Sql.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="no-service\Sql.aspx.designer.cs">
-      <DependentUpon>Sql.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="no-service\Lite.aspx.cs">
-      <DependentUpon>Lite.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="no-service\Lite.aspx.designer.cs">
-      <DependentUpon>Lite.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="PDF-Editor.aspx.cs">
+    <Compile Include="PDF-Editor.aspx.vb">
       <DependentUpon>PDF-Editor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="PDF-Editor.aspx.designer.cs">
-      <DependentUpon>PDF-Editor.aspx</DependentUpon>
+    <Compile Include="PDF-Form-Filler.aspx.designer.vb">
+      <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
     </Compile>
-    <Compile Include="PDF-Form-Filler.aspx.cs">
+    <Compile Include="PDF-Form-Filler.aspx.vb">
       <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="PDF-Form-Filler.aspx.designer.cs">
-      <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
+    <Compile Include="signatures\Default.aspx.designer.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="signatures\Default.aspx.cs">
+    <Compile Include="signatures\Default.aspx.vb">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="signatures\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="Upload.aspx.designer.vb">
+      <DependentUpon>Upload.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Upload.aspx.cs">
+    <Compile Include="Upload.aspx.vb">
       <DependentUpon>Upload.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Upload.aspx.designer.cs">
-      <DependentUpon>Upload.aspx</DependentUpon>
-    </Compile>
-    <Content Include="App_Code\CustomPdfIntegrationProvider.cs" />
-    <Content Include="App_Code\CustomPdfLiteSessionProvider.cs" />
-    <Content Include="App_Code\CustomPdfLiteStorageProvider.cs" />
-    <Content Include="App_Code\SignaturesPdfIntegrationProvider.cs" />
-    <Content Include="App_Code\SqlServerPdfLiteSessionProvider.cs" />
-    <Content Include="App_Code\SqlServerPdfLiteStorageProvider.cs" />
-    <Compile Include="App_GlobalResources\PdfWebControlResources.designer.cs">
+    <Content Include="App_Code\CustomPdfIntegrationProvider.vb" />
+    <Content Include="App_Code\CustomPdfLiteSessionProvider.vb" />
+    <Content Include="App_Code\CustomPdfLiteStorageProvider.vb" />
+    <Content Include="App_Code\SignaturesPdfIntegrationProvider.vb" />
+    <Compile Include="App_GlobalResources\PdfWebControlResources.designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PdfWebControlResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="lite\Basic.aspx.cs">
+    <Compile Include="lite\Basic.aspx.designer.vb">
+      <DependentUpon>Basic.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\Basic.aspx.vb">
       <DependentUpon>Basic.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\Custom-Interface.aspx.cs">
+    <Compile Include="lite\Custom-Interface.aspx.designer.vb">
+      <DependentUpon>Custom-Interface.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\Custom-Interface.aspx.vb">
       <DependentUpon>Custom-Interface.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\Easy-Integration.aspx.cs">
+    <Compile Include="lite\Easy-Integration.aspx.designer.vb">
+      <DependentUpon>Easy-Integration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\Easy-Integration.aspx.vb">
       <DependentUpon>Easy-Integration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\PDF-Editor.aspx.cs">
+    <Compile Include="lite\PDF-Editor.aspx.designer.vb">
+      <DependentUpon>PDF-Editor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\PDF-Editor.aspx.vb">
       <DependentUpon>PDF-Editor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\PDF-Form-Filler.aspx.cs">
+    <Compile Include="lite\PDF-Form-Filler.aspx.designer.vb">
+      <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\PDF-Form-Filler.aspx.vb">
       <DependentUpon>PDF-Form-Filler.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\signatures\Default.aspx.cs">
+    <Compile Include="lite\signatures\Default.aspx.designer.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\signatures\Default.aspx.vb">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="lite\Upload.aspx.cs">
+    <Compile Include="lite\Upload.aspx.designer.vb">
+      <DependentUpon>Upload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\Upload.aspx.vb">
       <DependentUpon>Upload.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="My Project\AssemblyInfo.vb" />
+    <Compile Include="My Project\Application.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Application.myapp</DependentUpon>
+    </Compile>
+    <Compile Include="My Project\MyExtensions\MyWebExtension.vb">
+      <VBMyExtensionTemplateID>Microsoft.VisualBasic.Web.MyExtension</VBMyExtensionTemplateID>
+      <VBMyExtensionTemplateVersion>1.0.0.0</VBMyExtensionTemplateVersion>
+    </Compile>
+    <Compile Include="My Project\Resources.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="My Project\Settings.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_GlobalResources\PdfWebControlResources.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>PdfWebControlResources.designer.cs</LastGenOutput>
+      <LastGenOutput>PdfWebControlResources.designer.vb</LastGenOutput>
     </Content>
+    <EmbeddedResource Include="My Project\Resources.resx">
+      <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+      <CustomToolNamespace>My.Resources</CustomToolNamespace>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="lite\signatures\web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="pdfs\RadPdfSampleForm.pdf" />
+    <None Include="My Project\Application.myapp">
+      <Generator>MyApplicationCodeGenerator</Generator>
+      <LastGenOutput>Application.Designer.vb</LastGenOutput>
+    </None>
+    <None Include="My Project\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <CustomToolNamespace>My</CustomToolNamespace>
+      <LastGenOutput>Settings.Designer.vb</LastGenOutput>
+    </None>
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Release\VB.csprojResolveAssemblyReference.cache" />
+    <None Include="packages.config" />
+    <None Include="pdfs\RadPdfSampleForm.pdf" />
     <Content Include="signatures\web.config" />
     <Content Include="utilities\WhatsMyIntegrationProvidersName.ashx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="no-service\web.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <OptionExplicit>On</OptionExplicit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionCompare>Binary</OptionCompare>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionStrict>Off</OptionStrict>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OptionInfer>On</OptionInfer>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
+    <DefineDebug>true</DefineDebug>
+    <DefineTrace>true</DefineTrace>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DocumentationFile>VB.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <DefineTrace>true</DefineTrace>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DocumentationFile>VB.xml</DocumentationFile>
     <Optimize>true</Optimize>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
-      <FlavorProperties GUID="{349C5851-65DF-11DA-9384-00065B846F21}">
+      <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>64037</DevelopmentServerPort>
+          <DevelopmentServerPort>53470</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
