--- a/CS_Blazor/BlazorApp1/Properties/launchSettings.json
+++ b/CS_Blazor/BlazorApp1/Properties/launchSettings.json
@@ -15,14 +15,16 @@
       "applicationUrl": "https://localhost:7049;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadEnabled" : false
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadEnabled" : false
     }
   }
 }
