--- a/CS_Core_No_Service/RadPdfCoreDemoNoService.csproj
+++ b/CS_Core_No_Service/RadPdfCoreDemoNoService.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
-    <PackageReference Include="RadPdf" Version="3.41.1" />
+    <PackageReference Include="RadPdf" Version="3.41.2" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.7" />
   </ItemGroup>
 </Project>
