--- a/VB/VB.x64.vbproj
+++ b/VB/VB.x64.vbproj
@@ -93,10 +93,14 @@
     <Content Include="lite\Custom-Interface.aspx" />
     <Content Include="lite\Default.aspx" />
     <Content Include="lite\Easy-Integration.aspx" />
+    <Content Include="lite\offline\Default.aspx" />
+    <Content Include="lite\offline\offline-service-worker.js" />
     <Content Include="lite\PDF-Editor.aspx" />
     <Content Include="lite\PDF-Form-Filler.aspx" />
     <Content Include="lite\signatures\Default.aspx" />
     <Content Include="lite\Upload.aspx" />
+    <Content Include="offline\Default.aspx" />
+    <Content Include="offline\offline-service-worker.js" />
     <Content Include="PDF-Editor.aspx" />
     <Content Include="PDF-Form-Filler.aspx" />
     <Content Include="signatures\Default.aspx" />
@@ -125,6 +129,20 @@
     </Compile>
     <Compile Include="Easy-Integration.aspx.vb">
       <DependentUpon>Easy-Integration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="lite\offline\Default.aspx.designer.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="lite\offline\Default.aspx.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="offline\Default.aspx.designer.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="offline\Default.aspx.vb">
+      <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="PDF-Editor.aspx.designer.vb">
